[gd_scene load_steps=17 format=2]

[ext_resource path="res://pynas_ground.png" type="Texture" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://main.gd" type="Script" id=3]
[ext_resource path="res://player.gd" type="Script" id=4]
[ext_resource path="res://second_enemy.gd" type="Script" id=6]
[ext_resource path="res://fourth_enemy.gd" type="Script" id=7]
[ext_resource path="res://third_enemy.gd" type="Script" id=8]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 280.751, 81.5849, 2.03077, 81.7841, 2.17589, 58.9874, 598.115, 59.4751, 598.115, 82.3958, 322.091, 82.3958, 279.885, 744.855, 322.591, 744.855 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 0, 3, 4, 5 ), PoolIntArray( 6, 0, 5, 7 ) ]
outlines = [ PoolVector2Array( 2.17589, 58.9874, 598.115, 59.4751, 598.115, 82.3958, 322.091, 82.3958, 322.591, 744.855, 279.885, 744.855, 280.751, 81.5849, 2.03077, 81.7841 ) ]

[sub_resource type="NavigationPolygon" id=2]
vertices = PoolVector2Array( 2.00868, 275.544, 598.681, 276.711, 599.221, 299.946, 2.00868, 299.927 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( 2.00868, 275.544, 598.681, 276.711, 599.221, 299.946, 2.00868, 299.927 ) ]

[sub_resource type="NavigationPolygon" id=3]
vertices = PoolVector2Array( 2.32152, 510.823, 599.041, 510.823, 599.041, 534.451, 2.32152, 534.451 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( 2.32152, 510.823, 599.041, 510.823, 599.041, 534.451, 2.32152, 534.451 ) ]

[sub_resource type="NavigationPolygon" id=4]
vertices = PoolVector2Array( 1.14684, 720.802, 599.256, 720.802, 599.256, 744.43, 1.14684, 744.894 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( 1.14684, 720.802, 599.256, 720.802, 599.256, 744.43, 1.14684, 744.894 ) ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 14.5624, 14.2691 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 14.2218, 14.2691 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 14.2218, 14.2691 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 13.2001, 13.2474 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 298.448, 1.11491 )

[node name="main" type="Node2D"]
script = ExtResource( 3 )

[node name="pynas_ground" type="Sprite" parent="."]
position = Vector2( 300, 400 )
texture = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 300, 25 )

[node name="paths" type="Node2D" parent="."]

[node name="path_for_main_enemy" type="Navigation2D" parent="paths"]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="paths/path_for_main_enemy"]
navpoly = SubResource( 1 )

[node name="path_for_second_enemy" type="Navigation2D" parent="paths"]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="paths/path_for_second_enemy"]
navpoly = SubResource( 2 )

[node name="path_for_third_enemy" type="Navigation2D" parent="paths"]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="paths/path_for_third_enemy"]
navpoly = SubResource( 3 )

[node name="path_for_fourth_enemy" type="Navigation2D" parent="paths"]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="paths/path_for_fourth_enemy"]
navpoly = SubResource( 4 )

[node name="enemys" type="Node2D" parent="."]

[node name="main_enemy" type="Area2D" parent="enemys" groups=[
"enemys",
]]
position = Vector2( 24, 40 )
script = ExtResource( 6 )

[node name="main_enemy" type="Sprite" parent="enemys/main_enemy"]
modulate = Color( 1, 0.243137, 0.243137, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemys/main_enemy"]
shape = SubResource( 5 )

[node name="second_enemy" type="Area2D" parent="enemys" groups=[
"enemys",
]]
position = Vector2( 64, 40 )
script = ExtResource( 6 )

[node name="second_enemy" type="Sprite" parent="enemys/second_enemy"]
modulate = Color( 1, 0.243137, 0.243137, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemys/second_enemy"]
shape = SubResource( 5 )

[node name="third_enemy" type="Area2D" parent="enemys" groups=[
"enemys",
]]
position = Vector2( 104, 40 )
script = ExtResource( 8 )

[node name="third_enemy" type="Sprite" parent="enemys/third_enemy"]
modulate = Color( 1, 0.243137, 0.243137, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemys/third_enemy"]
shape = SubResource( 6 )

[node name="fourth_enemy" type="Area2D" parent="enemys" groups=[
"enemys",
]]
position = Vector2( 144, 40 )
script = ExtResource( 7 )

[node name="fourth_enemy" type="Sprite" parent="enemys/fourth_enemy"]
modulate = Color( 1, 0.243137, 0.243137, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemys/fourth_enemy"]
shape = SubResource( 7 )

[node name="player" type="Area2D" parent="."]
position = Vector2( 299.694, 27.2449 )
script = ExtResource( 4 )

[node name="player" type="Sprite" parent="player"]
modulate = Color( 0, 1, 0.0862745, 1 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
shape = SubResource( 8 )

[node name="lines" type="Node2D" parent="."]

[node name="starting_line" type="Area2D" parent="lines" groups=[
"start_line",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="lines/starting_line"]
position = Vector2( 299.19, 63.2608 )
shape = SubResource( 9 )

[node name="finishing_line" type="Area2D" parent="lines" groups=[
"end_line",
]]
position = Vector2( 0.975372, 669.578 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="lines/finishing_line"]
position = Vector2( 299.19, 63.2608 )
shape = SubResource( 9 )
[connection signal="area_entered" from="player" to="." method="_on_player_area_entered"]
